--- a/lilypichu.scss
+++ b/lilypichu.scss
@@ -27,7 +27,7 @@
 
   // Basic right popout when there's nothing
   .container-2lgZY8::after {
-    content: "Stay comfy ❤"; position: fixed;
+    content: "Keep Gaming"; position: fixed;
     top: 220px; bottom: 85px; right: 60px; z-index: -2;
     width: 320px; background-color: var(--background-primary);
     text-align: center; display: flex; align-items: center;
