--- a/stuff/_overlay.scss
+++ b/stuff/_overlay.scss
@@ -1,5 +1,5 @@
 :root { 
-
+/*
 .app-1q1i1E::before, .app-1q1i1E::after, .app-2rEoOp::after, .app-2rEoOp::before, .layers-3iHuyZ::before, .layers-3iHuyZ::after, .app-1q1i1E::before, .bg-h5JY_x::after { content: ""; position: fixed; z-index: 1; pointer-events: none;}
 
 .app-1q1i1E { // Yellow stripes
@@ -25,5 +25,5 @@
     // Song note
     &::before { z-index: 2; bottom: 30%; right: 430px; width: 30px; height: 40px;background: url('https://i.imgur.com/JMoXBIs.png') no-repeat; background-size: 100%;}
 }
-
+    */
 }
