--- a/main.css
+++ b/main.css
@@ -4,13 +4,14 @@
 @import url("https://discord-custom-covers.github.io/usrbg/dist/usrbg.css");
 @import url("https://monstrousdev.github.io/themes/addons/user-tags.css");
 :root {
-  --jumping-gif: url("https://i.imgur.com/dCd49s0.gif");
-  --background-tertiary-alt: #FFC7D4;
-  --border-radius: 20px;
-  --playing: #8ea6fc;
-  --spotify: #5fce86;
-  --streaming: #9b77da;
-  --xbox: #53a853;
+    /*--jumping-gif: url("https://i.imgur.com/dCd49s0.gif");*/
+    --jumping-gif: url("");
+    --background-tertiary-alt: url("https://wallpapercave.com/wp/wp5728306.jpg");
+    --border-radius: 20px;
+    --playing: #8ea6fc;
+    --spotify: #5fce86;
+    --streaming: #9b77da;
+    --xbox: #53a853;
 }
 
 .theme-dark {
@@ -1743,7 +1744,7 @@
   }
 
   .container-2lgZY8::after {
-    content: "Stay comfy ❤";
+    content: "Keep Gaming";
     position: fixed;
     top: 220px;
     bottom: 85px;
