--- a/lilypichu.scss
+++ b/lilypichu.scss
@@ -6,7 +6,7 @@
 @forward 'stuff/member-list';
 @forward 'stuff/settings';
 @forward 'stuff/friends';
-@forward 'stuff/overlay';
+//@forward 'stuff/overlay';
 @forward 'stuff/other';
 
 @import url('https://nyri4.github.io/donators/donators.css');
