--- a/main.css
+++ b/main.css
@@ -1458,12 +1458,12 @@
   background-color: var(--background-secondary-alt);
 }
 
-:root .app-1q1i1E::before, :root .app-1q1i1E::after, :root .app-2rEoOp::after, :root .app-2rEoOp::before, :root .layers-3iHuyZ::before, :root .layers-3iHuyZ::after, :root .app-1q1i1E::before, :root .bg-h5JY_x::after {
+/*:root .app-1q1i1E::before, :root .app-1q1i1E::after, :root .app-2rEoOp::after, :root .app-2rEoOp::before, :root .layers-3iHuyZ::before, :root .layers-3iHuyZ::after, :root .app-1q1i1E::before, :root .bg-h5JY_x::after {
   content: "";
   position: fixed;
   z-index: 1;
   pointer-events: none;
-}
+}*/
 /*:root .app-1q1i1E::before {
   left: 0;
   top: 0;
