--- a/stuff/_overlay.scss
+++ b/stuff/_overlay.scss
@@ -1,10 +1,12 @@
-/*:root { 
+:root { 
 
 .app-1q1i1E::before, .app-1q1i1E::after, .app-2rEoOp::after, .app-2rEoOp::before, .layers-3iHuyZ::before, .layers-3iHuyZ::after, .app-1q1i1E::before, .bg-h5JY_x::after { content: ""; position: fixed; z-index: 1; pointer-events: none;}
 
 .app-1q1i1E { // Yellow stripes
-    &::before { left: 0; top: 0; width: 250px; height: 250px; background: url('https://i.imgur.com/jTpFJuI.png') no-repeat; background-size: 100%;}
-    &::after { z-index: 0; left: 50px; bottom: 0; width: 490px; height: 40px; background: url('https://i.imgur.com/KQQWcTY.png') no-repeat; background-size: 100%;}
+    /*&::before { left: 0; top: 0; width: 250px; height: 250px; background: url('https://i.imgur.com/jTpFJuI.png') no-repeat; background-size: 100%;}*/
+    &::before { left: 0; top: 0; width: 250px; height: 250px; background: url('') no-repeat; background-size: 100%;}
+    /*&::after { z-index: 0; left: 50px; bottom: 0; width: 490px; height: 40px; background: url('https://i.imgur.com/KQQWcTY.png') no-repeat; background-size: 100%;}*/
+    &::after { z-index: 0; left: 50px; bottom: 0; width: 490px; height: 40px; background: url('') no-repeat; background-size: 100%;}
 }
 
 .app-2rEoOp { // LilyPichu flower
@@ -26,4 +28,4 @@
     &::before { z-index: 2; bottom: 30%; right: 430px; width: 30px; height: 40px;background: url('https://i.imgur.com/JMoXBIs.png') no-repeat; background-size: 100%;}
 }
     
-}*/
+}
