--- a/stuff/_member-list.scss
+++ b/stuff/_member-list.scss
@@ -29,7 +29,7 @@
     }
     
     // Footer
-    /*&::after {
+    &::after {
         content: ""; position: absolute;
         bottom: -35px; z-index: 1;
         width: 100%; height: 35px;
@@ -39,7 +39,7 @@
         background-position: top;
         background-size: 21px 2px;
         background-repeat: repeat-x;
-    }*/
+    }
 }
 
 .layout-2DM8Md { border-radius: var(--border-radius);}
