--- a/main.css
+++ b/main.css
@@ -1458,12 +1458,12 @@
   background-color: var(--background-secondary-alt);
 }
 
-/*:root .app-1q1i1E::before, :root .app-1q1i1E::after, :root .app-2rEoOp::after, :root .app-2rEoOp::before, :root .layers-3iHuyZ::before, :root .layers-3iHuyZ::after, :root .app-1q1i1E::before, :root .bg-h5JY_x::after {
+:root .app-1q1i1E::before, :root .app-1q1i1E::after, :root .app-2rEoOp::after, :root .app-2rEoOp::before, :root .layers-3iHuyZ::before, :root .layers-3iHuyZ::after, :root .app-1q1i1E::before, :root .bg-h5JY_x::after {
   content: "";
   position: fixed;
   z-index: 1;
   pointer-events: none;
-}*/
+}
 /*:root .app-1q1i1E::before {
   left: 0;
   top: 0;
@@ -1484,8 +1484,8 @@
 :root .app-2rEoOp::before {
     top: 80px;
     right: 116px;
-    width: 200px;
-    height: 120px;
+    width: 366px;
+    height: 114px;
     background: url("https://i.imgur.com/rkAl1z3.png") no-repeat;
     background-size: 100%;
 }
