--- a/main.css
+++ b/main.css
@@ -1470,7 +1470,7 @@
     right: 116px;
     width: 366px;
     height: 114px;
-    background: url("https://i.imgur.com/rkAl1z3.png") no-repeat;
+    background: url("") no-repeat;
     background-size: 100%;
 }
 :root ::-webkit-input-placeholder, :root body, :root button, :root input, :root select, :root textarea {
