--- a/stuff/_overlay.scss
+++ b/stuff/_overlay.scss
@@ -1,6 +1,6 @@
 :root {
 
-    .app-2rEoOp::before{
+    .app-2rEoOp::before {
         content: "";
         position: fixed;
         z-index: 1;
@@ -13,7 +13,8 @@
             right: 90px;
             width: 366px;
             height: 114px;
-            background: url('https://i.imgur.com/rkAl1z3.png') no-repeat;
+            //background: url('https://i.imgur.com/rkAl1z3.png') no-repeat;
+            background: url('') no-repeat;
             background-size: 100%;
         }
     }
