--- a/main.css
+++ b/main.css
@@ -1464,7 +1464,7 @@
   z-index: 1;
   pointer-events: none;
 }*/
-
+/*
 :root .app-2rEoOp::before {
     top: 80px;
     right: 116px;
@@ -1472,7 +1472,7 @@
     height: 114px;
     background: url("") no-repeat;
     background-size: 100%;
-}
+}*/
 :root ::-webkit-input-placeholder, :root body, :root button, :root input, :root select, :root textarea {
   font-family: "Nunito" !important;
   font-weight: bold !important;
