--- a/stuff/_overlay.scss
+++ b/stuff/_overlay.scss
@@ -1,5 +1,5 @@
 :root {
-
+/*
     .app-2rEoOp::before {
         content: "";
         position: fixed;
@@ -17,5 +17,5 @@
             background: url('') no-repeat;
             background-size: 100%;
         }
-    }
+    }*/
 }
