--- a/main.css
+++ b/main.css
@@ -1689,7 +1689,7 @@
   }
 
   .container-2lgZY8::before {
-    content: "";
+    content: "Keep Gaming";
     position: fixed;
     top: 220px;
     bottom: 85px;
