--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
 @import url("https://monstrousdev.github.io/themes/addons/user-tags.css");
 :root {
     /*--jumping-gif: url("https://i.imgur.com/dCd49s0.gif");*/
-    --jumping-gif: url("");
+    --jumping-gif: url("https://i.imgur.com/rkAl1z3.png");
     --background-tertiary-alt: url("https://wallpapercave.com/wp/wp5728306.jpg");
     --border-radius: 20px;
     --playing: #8ea6fc;
