--- a/lilypichu.scss
+++ b/lilypichu.scss
@@ -43,7 +43,7 @@
   }
   
   // Adding space for right popout
-  .guilds-1SWlCJ + :nth-child(2) { margin-right: 450px; border-radius: 0 var(--border-radius) var(--border-radius) 0;}
+  .guilds-1SWlCJ + :nth-child(2) { margin-right: 450px; border-radius: 20px;}
 
   // User area
   .panels-j1Uci_ > .container-3baos1 { 
