--- a/stuff/_server-list.scss
+++ b/stuff/_server-list.scss
@@ -37,7 +37,7 @@
 .wrapperSimple-19ogV2,
 .folderIconWrapper-226oVY, .folderIconWrapper-1_bOZe,
 .expandedFolderBackground-2sPsd-, .flexChild-faoVW3 .avatarUploaderInner-3UNxY3 {
-  border-radius: var(--border-radius);
+  border-radius: 20px;
 }
 
 .panels-j1Uci_ { z-index: unset;}
