--- a/main.css
+++ b/main.css
@@ -586,7 +586,7 @@
 }
 
 :root .membersWrap-2h-GB4::before {
-  content: "Fuckers list";
+  content: "Members list";
   position: absolute;
   top: -230px;
   z-index: 1;
