--- a/stuff/_member-list.scss
+++ b/stuff/_member-list.scss
@@ -5,7 +5,7 @@
         
     // Header
     &::before {
-        content: "Fuckers list"; position: absolute;
+        content: "Members list"; position: absolute;
         top: -230px; z-index: 1;
         width: 100%; height: 60px;
         display: flex;
