--- a/main.css
+++ b/main.css
@@ -1670,7 +1670,7 @@
   }
 
   .container-2lgZY8::after {
-    content: "Keep Gaming";
+    content: "g";
     position: fixed;
     top: 420px;
     bottom: 85px;
