--- a/main.css
+++ b/main.css
@@ -1670,9 +1670,9 @@
   }
 
   .container-2lgZY8::after {
-    content: "g";
+    content: "Keep Gaming";
     position: fixed;
-    top: 420px;
+    top: 60px;
     bottom: 85px;
     right: 60px;
     z-index: -2;
