--- a/lilypichu.scss
+++ b/lilypichu.scss
@@ -27,8 +27,8 @@
 
   // Basic right popout when there's nothing
   .container-2lgZY8::after {
-    content: "g"; position: fixed;
-    top: 420px; bottom: 85px; right: 60px; z-index: -2;
+    content: "Keep Gaming"; position: fixed;
+    top: 60px; bottom: 85px; right: 60px; z-index: -2;
     width: 320px; background-color: var(--background-primary);
     text-align: center; display: flex; align-items: center;
     justify-content: center; font-size: 30px; color: var(--text-normal);
